# propscrap

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: config.py  errors.py  main.py
apps/api/app/api/: routes.py
apps/api/app/db/: session.py
apps/api/app/jobs/: dispatch_alerts.py  enrich_tender.py  generate_alerts.py  ingest_source.py  match_tenders.py  process_tender.py
apps/api/app/models/: __init__.py  admin_audit.py  tender.py
apps/api/app/schemas/: admin.py  auth.py  tender.py
apps/api/app/seeds/: demo_data.py
apps/api/app/services/: alert_delivery.py  alerts.py  audit.py  auth.py  automation.py  company_profiles.py  company_registry.py  detail_cache.py  documents.py  email.py  http_safety.py  llm_enrichment.py  matching.py  ocr.py  rate_limit.py  runtime_settings.py  source_access.py  source_catalog.py  source_registry.py  sources.py  telegram.py  tenders.py  text_extraction.py  users.py  whatsapp.py  workflow.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260331_000001_initial_phase1.py  20260331_000002_phase2_documents.py  20260331_000003_phase3_enrichments.py  20260331_000004_phase4_matching.py  20260331_000005_phase5_workflow_alerts.py  20260401_000006_phase6_whatsapp_alerts.py  20260401_000007_phase7_auth_user_profile.py  20260401_000008_phase8_user_owned_company_profiles.py  20260401_000009_phase9_automation_settings.py  (+7 more)
apps/api/tests/: test_alert_preferences.py  test_contratar_connector.py  test_matching.py  test_public_connectors.py  test_source_catalog.py
(+138 files in other folders)
